fix - testing padding on mobile

--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 0 .75%;
+        padding: 0 1.5%;
     }
 
     .card {
